Fix mobile header safe-area spacing

--- a/packages/block-library/src/blocks/header/scss/_header-mobile.scss
+++ b/packages/block-library/src/blocks/header/scss/_header-mobile.scss
@@ -13,6 +13,7 @@
   justify-content: center;
 
   padding: var(--theme-spacing-fluid-smaller) var(--theme-wrapper-sides-spacing);
+  padding-top: calc(var(--theme-spacing-fluid-smaller) + var(--nb-mobile-header-safe-area-inset-top, 0px));
 
   --shadow-color: rgba(0, 0, 0, 0.25);
   --shadow-y-offset: 4px;
@@ -41,6 +42,10 @@
       display: none;
     }
   }
+}
+
+:is(.nb-header--mobile, #more.specific) {
+  padding-top: calc(var(--theme-spacing-fluid-smaller) + var(--nb-mobile-header-safe-area-inset-top, 0px));
 }
 
 @include above(lap) {
