--- a/packages/block-library/src/blocks/header/scss/_menu-toggle.scss
+++ b/packages/block-library/src/blocks/header/scss/_menu-toggle.scss
@@ -59,6 +59,7 @@
 
   height: 100%;
 	padding: 1em var(--nb-wrapper-sides-spacings, 0);
+  padding-top: calc(1em + var(--nb-mobile-header-safe-area-inset-top, 0px));
 
 	cursor: pointer;
 }
